<resources>
    <string name="app_name">AppAppare</string>
    <string name="title_activity_home">home</string>
    <string name="logo">logo</string>
    <string name="cercaBtn">Button Cerca</string>
    <string name="affamatoBtn">Button Affamato</string>
    <string name="cerca">Cerca Offerte</string>
    <string name="affamato">Mi sento affamato</string>
    <string name="frutta">Frutta</string>
    <string name="hamburger">Hamburger</string>
    <string name="kebab">Kebab</string>
    <string name="patatine">Patatine</string>
    <string name="panini">Panini</string>
    <string name="sushi">Sushi</string>
    <string name="pesce">Pesce</string>
    <string name="pizza">Pizza</string>
    <string name="login">Login</string>
    <string name="registrati">Registrati</string>
    <string name="effettuareg">EffettuaRegistrazione</string>
    <string name="offerteSalv">Offerte salvate</string>
</resources>
