<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Scegliere le tipologie di cibo"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="25dp" />

        <CheckBox
            android:id="@+id/pesce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:onClick="selectItem"
            android:text="@string/pesce" />

        <CheckBox
            android:id="@+id/pizza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="selectItem"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:text="@string/pizza" />

        <CheckBox
            android:id="@+id/frutta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="selectItem"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:text="@string/frutta" />

        <CheckBox
            android:id="@+id/hamburger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="selectItem"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:text="@string/hamburger" />

        <CheckBox
            android:id="@+id/kebab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="selectItem"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:text="@string/kebab" />

        <CheckBox
            android:id="@+id/patatine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="selectItem"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:text="@string/patatine" />

        <CheckBox
            android:id="@+id/panini"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:onClick="selectItem"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:text="@string/panini" />

        <CheckBox
            android:id="@+id/sushi"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:onClick="selectItem"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:text="@string/sushi" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:text="Seleziona tutto" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:text="Avanti" />

</LinearLayout>