<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".SelectFoodActivity"
    android:background="@drawable/woodbackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/backBtn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/back" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/profileBtn"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginLeft="340dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/round_face_white_48dp" />

                        <ImageButton
                            android:id="@+id/homeBtn"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginLeft="-130dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/homebutton" />

                </LinearLayout>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="5dp">


                <CheckBox
                    android:id="@+id/pesce"
                    android:layout_width="131dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/pesce"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/pizza"
                    android:layout_width="133dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/pizza"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/frutta"
                    android:layout_width="132dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:text="@string/frutta"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/hamburger"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/hamburger"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/kebab"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/kebab"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/patatine"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/patatine"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/carne"
                    android:layout_width="132dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/carne"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/sushi"
                    android:layout_width="136dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/sushi"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/avanti"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="Avanti" />
        </LinearLayout>

</LinearLayout>
