<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/hamburger_1080x1920"
    android:layout_height="match_parent"
    tools:context=".effettuaLogin">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:layout_marginTop="70dp"
            android:contentDescription="@string/logo"
            />
        <EditText
            android:id="@+id/Username"
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:hint="Username"
            android:fontFamily="sans-serif-light"
            android:textStyle="italic"
            android:textSize="25dp"/>

        <EditText
            android:id="@+id/Password"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:hint="Password"
            android:inputType="textPassword"
            android:fontFamily="sans-serif-light"
            android:textStyle="italic"
            android:textSize="25dp"
            />

        <Button
            android:id="@+id/loginButton"
            android:layout_marginTop="20dp"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/login" />
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="-oppure-"
            android:textSize="20dp"
            android:textColor="#000"
            android:fontFamily="sans-serif-light"
            android:textStyle="italic"/>

        <Button
            android:id="@+id/registratiButton"
            android:layout_marginTop="20dp"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/registrati" />


    </LinearLayout>
</RelativeLayout>
